add plugin-proposal-decorators and example

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/HelloJunWei/javascript-decorator-example#readme",
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "webpack": "^4.43.0",
